Se cambia img y se añade h2

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 <body>
   <div class="container">
     <h1>Ir a Github</h1>
+    <h1>Hola</h1>
     <a href="https://github.com/undostresdoce">
-      <img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" alt="octocat">
+      <img
+        src="https://www.freepik.es/foto-gratis/vista-3d-adorable-gato-mascota_45201807.htm#query=cat%20pixel%20art&position=2&from_view=search&track=ais&uuid=39d350d7-6e7b-4f9c-a05c-400379852830"
+        alt="mmiau">
     </a>
     <button type="button" class="btn">
       <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
